@@ -202,3 +202,18 @@ test_that(".ppm_range works", {
     expect_equal(res[1], 100 - 5000 / 1e6)
     expect_equal(res[2], 100 + 5000 / 1e6)
 })
+
+## test_that(".chrom_peak_id works", {
+##     res <- .chrom_peak_id(matrix(nrow = 0, ncol = 5))
+##     expect_equal(res, character())
+##     cpks <- rbind(c(3, 2, 4, 12, 13),
+##                   c(4, 2, 4, 123, 43),
+##                   c(3, 2, 4, 12, 13),
+##                   c(5, 4, 6, 123, 45))
+##     colnames(cpks) <- c("rt", "rtmin", "rtmax", "into", "maxo")
+##     expect_error(.chrom_peak_id(cpks))
+##     res <- .chrom_peak_id(cpks[-3, ])
+##     expect_equal(res, c("3-2-4-12-13", "4-2-4-123-43", "5-4-6-123-45"))
+##     cpks <- chromPeaks(xod_x)
+##     res <- .chrom_peak_id(cpks)
+## })
